Making the README somewhat useful.

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+The key parts of what was coded are all specs:
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+spec/features/creating_contacts_spec.rb
+spec/controllers/creating_contacts_spec.rb
+spec/models/contact_spec.rb
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Any questions? Feel free to hit me up on Twitter (@pat) or on the Google Group – https://groups.google.com/forum/#!forum/rails-oceania
